# Pruebas_libro

./: ti_Teoria_Informacion.ipynb
.github/workflow/: manual.yml
.github/workflows/: manual.yml
content/: IA_Estado_Arte.ipynb  Intro_Tensores_II.ipynb  Prob_Conceptos_Basicos.ipynb  optimizacion_sgd.ipynb
content/.ipynb_checkpoints/: Intro_Tensores_II-checkpoint.ipynb
prueba_1/: CONTRIBUTING.md  LICENSE  README.md
prueba_1/.github/workflows/: deploy.yml
prueba_1/prueba_1/: Intro_Tensores_II.ipynb  Prob_Variables_Aleatorias.ipynb  _config.yml  _toc.yml  conf.py  setup.cfg
prueba_1/prueba_1/_build/.doctrees/: Intro_Tensores_II.doctree  Prob_Conceptos_Basicos.doctree  Prob_Variables_Aleatorias.doctree  content.doctree  environment.pickle  intro.doctree  markdown.doctree  notebooks.doctree  optimizacion_sgd.doctree  ti_Teoria_Informacion.doctree
prueba_1/prueba_1/_build/.doctrees/Imagenes/: Imagenes.doctree
prueba_1/prueba_1/_build/html/: .buildinfo  Intro_Tensores_II.html  Prob_Conceptos_Basicos.html  Prob_Variables_Aleatorias.html  content.html  genindex.html  intro.html  markdown.html  notebooks.html  objects.inv  optimizacion_sgd.html  search.html  searchindex.js  ti_Teoria_Informacion.html
prueba_1/prueba_1/_build/html/Imagenes/: Imagenes.html
prueba_1/prueba_1/_build/jupyter_execute/: Intro_Tensores_II.ipynb  Intro_Tensores_II.py  Prob_Conceptos_Basicos.ipynb  Prob_Conceptos_Basicos.py  Prob_Variables_Aleatorias.ipynb  Prob_Variables_Aleatorias.py  notebooks.ipynb  optimizacion_sgd.ipynb  optimizacion_sgd.py  ti_Teoria_Informacion.ipynb  ti_Teoria_Informacion.py
