[metadata]
name =  #Titulo libro
version = #control de versiones
description = #Descripción corta del libro
long_description = file: README.md #Descripción larga del libro
url = #Repositorio en el que se aloja el libro
author = #Autor
#license = BSD-3-Clause
#license_file = LICENSE
platforms=any
classifiers =
    Development Status :: 4 - Beta
    #License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    #Temas del libro. Ver https://pypi.org/classifiers/
    #Topic :: Software Development :: Libraries :: Python Modules
    #Topic :: Text Processing :: Markup

[options]
packages = find:
setup_requires = pyscaffold>=3.2a0,<3.3a0
install_requires =
    #Librerías necesarias para le funcionamiento del libro
    click~=7.1
    docutils>=0.15,<0.18
    jsonschema<4
    # Include Jupytext to ensure users have the right version, even if not strictly necessary
    jupytext>=1.11.2,<1.12  #markdown-it-py~=1 required and support from 1.11.2
    linkify-it-py~=1.0.1
    myst-nb~=0.13.1
    pyyaml
    sphinx>=3,<5
    sphinx-comments
    sphinx-copybutton
    sphinx-external-toc~=0.2.3
    sphinx-jupyterbook-latex~=0.4.6
    sphinx-panels~=0.6.0
    sphinx-thebe~=0.0.10
    sphinx_book_theme~=0.1.4
    sphinx_togglebutton
    sphinxcontrib-bibtex~=2.2.0
    sphinx-multitoc-numbering~=0.1.3
    importlib_metadata;python_version < "3.7"
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    jb = jupyter_book.cli.main:main
    jupyter-book = jupyter_book.cli.main:main

[options.extras_require]
code_style =
    pre-commit~=2.12
pdfhtml =
    pyppeteer
sphinx =
    #Carga de librerías que se usan en el libro
    scipy
    openpyxl #Para poder hacer la visualización de datos importados con pandas
    matplotlib
    ipympl #Para que los widgets se puedan visualizar
    numpy
    pandas
    nbclient 
    plotly
    sphinx-click
    sphinx_inline_tabs
    sphinxext-rediraffe~=0.2.3
    sympy
    sphinx-proof
testing =
    beautifulsoup4
    beautifulsoup4
    cookiecutter
    coverage
    matplotlib
    openpyxl
    pyppeteer
    pytest>=6.2.4
    pytest-cov
    pytest-regressions
    pytest-timeout
    pytest-xdist
    sphinx_click
    sphinx_tabs
    texsoup

[flake8]
max-line-length = 100
extend-ignore = E203